--- a/ProseTerrain/app/src/main/res/layout/item_message.xml
+++ b/ProseTerrain/app/src/main/res/layout/item_message.xml
@@ -10,6 +10,7 @@
         android:id="@+id/message_sender"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:textSize="14sp"
+        android:textColor="@color/black"
         app:layout_constraintStart_toEndOf="@+id/message_sender"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/message_timestamp" />
