--- a/ProseCommandement/app/src/main/res/values/colors.xml
+++ b/ProseCommandement/app/src/main/res/values/colors.xml
@@ -20,4 +20,6 @@
     <color name="red">#FF0000</color>
     <color name="yellow">#FFD700</color>
     <color name="green">#4CAF50</color>
+
+    <color name="target_red">#e53935</color>
 </resources>
